<resources>
    <string name="app_name">Viracopos</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_players">PlayersActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_names">NamesActivity</string>
    <string name="title_activity_report_activity">ReportActivity</string>

    <string name="players_activity_title">Insert your name to play</string>
    <string name="players_activity_button">Start Game</string>]
    <string name="players_activity_button2">Check Rank</string>

    <string name="names_activity_title">Insert your name</string>
    <string name="names_activity_names">Name</string>
    <string name="names_activity_txt1">Player 1</string>
    <string name="names_activity_txt2">Player 2</string>
    <string name="names_activity_txt3">Player 3</string>
    <string name="names_activity_txt4">Player 4</string>
    <string name="names_activity_button">Continue</string>

    <string name="report_activity_title">Rank</string>

    <string name="title_activity_test">test</string>
    <string name="title_activity_quiz">QuizActivity</string>

</resources>
