<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context=".PlayersActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="carlos.figueiredo.com.viracopos.NamesActivity"
        android:layout_gravity="end|center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/names_activity_title"
            android:id="@+id/namesTitle"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/names_activity_txt1"
            android:id="@+id/textView"
            android:layout_marginTop="100dp"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/names_activity_names"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_alignTop="@+id/textView"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/names_activity_txt2"
            android:id="@+id/textView2"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/names_activity_names"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/names_activity_txt3"
            android:id="@+id/textView3"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/names_activity_names"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignParentEnd="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/names_activity_txt4"
            android:id="@+id/textView4"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/names_activity_names"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/names_activity_button"
            android:id="@+id/btnNames"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</FrameLayout>